[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indict"
version = "0.1.0"
description = "OSINT indicator enrichment and triage CLI: one command to enrich, correlate, and triage an IP, domain, hash, or URL."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Reese Gerjekian" }]
keywords = ["osint", "security", "threat-intelligence", "ioc", "triage"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "dnspython>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
indict = "indict.cli:main"

[project.urls]
Homepage = "https://github.com/rgerjeki/indict"
Repository = "https://github.com/rgerjeki/indict"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
